--- a/app/src/main/res/layout/n_activity_event_ku.xml
+++ b/app/src/main/res/layout/n_activity_event_ku.xml
@@ -13,6 +13,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
+        android:paddingTop="24dp"
+        android:paddingBottom="12dp"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -21,39 +26,41 @@
             android:id="@+id/tvde_Back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="70dp"
             android:text="@string/back"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/poppinsmedium"
             android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/tv_de"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:padding="2dp"
+            android:layout_weight="1"
             android:gravity="center"
-            android:textSize="23sp"
+            android:textSize="22sp"
             android:text="MyEvent"
             android:textColor="@color/white"
             android:fontFamily="@font/poppinsmedium"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/back"
+            android:visibility="invisible"/>
+
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerEventKu"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:nestedScrollingEnabled="false"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        android:clipToPadding="false"
+        android:paddingBottom="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/header"
-        app:layout_constraintVertical_bias="0.0"
-        tools:itemCount="10"
         tools:listitem="@layout/n_item_event"/>
 
     <TextView
@@ -65,8 +72,8 @@
         android:textSize="16sp"
         android:fontFamily="@font/poppinsmedium"
         android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@id/recyclerEventKu"
-        app:layout_constraintBottom_toBottomOf="@id/recyclerEventKu"
+        app:layout_constraintTop_toBottomOf="@id/header"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:visibility="visible"/>
