--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Base.Theme.HuddleUp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.HuddleUp" parent="Theme.AppCompat.DayNight.NoActionBar">
     </style>
 
     <style name="Theme.HuddleUp" parent="Base.Theme.HuddleUp" />
