--- a/app/src/main/res/layout/z_item_eventp2.xml
+++ b/app/src/main/res/layout/z_item_eventp2.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="16dp"
     android:gravity="center_vertical"
@@ -21,4 +22,17 @@
     android:textSize="18sp"
     android:textColor="@android:color/black"
     android:text="Nama Event" />
+
+    <ImageButton
+        android:id="@+id/ib_add_to_wishlist"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@drawable/ic_favorite_border"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:contentDescription="Tambahkan ke Wishlist"
+        app:tint="@color/text_secondary"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="16dp"/>
 </LinearLayout>
