--- a/app/src/main/res/layout/j_notification.xml
+++ b/app/src/main/res/layout/j_notification.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -24,6 +25,19 @@
         android:background="@color/white"
         android:layout_above="@id/bottomNavbar"
         android:padding="8dp"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabUpload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="90dp"
+        android:layout_marginEnd="16dp"
+        android:contentDescription="Upload Gambar"
+        android:src="@drawable/ic_upload"
+        app:backgroundTint="#4FB2DF"
+        app:tint="@android:color/white" />
 
     <LinearLayout
         android:id="@+id/bottomNavbar"
